--- a/index.html
+++ b/index.html
@@ -439,10 +439,11 @@
                     <p>Get in touch with us via mail phone.We are waiting for your call or message.</p>
                     <div class="button"><button>Contact Us</button></div>
                     <div class="links-logo">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-google"></i>
-                        <i class="fa-brands fa-github"></i>
+                        <img src="image/facebook.svg" alt="facebooklogo">
+                        <img src="image/twitter.svg" alt="twitterlogo">
+                        <img src="image/google.svg" alt="googlelogo">
+                        <img src="image/youtube.svg" alt="youtubelogo">
+                        <img src="image/github.svg" alt="githublogo">
                     </div>
                 </div>
             </div>
