--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
@@ -238,8 +237,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
@@ -247,8 +245,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
@@ -256,8 +253,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
@@ -265,8 +261,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
@@ -274,8 +269,7 @@
                 <div class="yellow-box"></div>
                 <div class="caption">
                     <h4>DOE BRANDING</h4>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium
-                        ut lacinia in, elementum id enim..</p>
+                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
                 </div>
                 <img src="image/tree-736885__340.jpg" alt="">
             </div>
