--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- END HEADER -->
 
     <!-- START LANDING-SECTION -->
-    <div class="landing">
+    <div id="home" class="landing">
         <div class="landing-section">
             <div class="text">
                 <h1>DESIGN COMES TO THOSE WHO WAIT</h1>
@@ -73,7 +73,7 @@
     <!-- END HEAD-PARAGRAPH -->
 
     <!-- START SERVICES -->
-    <div class="services">
+    <div id="services" class="services">
         <div class="container">
             <div class="logo-image">
                 <img src="image/axes.svg" alt="axes">
@@ -204,7 +204,7 @@
     <!-- END SERVICES -->
 
     <!-- START PORTFOLIO -->
-    <div class="portfolio">
+    <div id="portfolio" class="portfolio">
         <div class="container">
             <div class="portfolio-content">
                 <div class="image-logo">
@@ -345,7 +345,7 @@
     <!-- END OURTEAM -->
 
     <!-- START ARTICLE -->
-    <div class="article">
+    <div id="about" class="article">
         <div class="container">
             <div class="article-content">
                 <div class="caption">
@@ -388,7 +388,7 @@
     <!-- END ARTICLE -->
 
     <!-- START FOOTER-SECTION -->
-    <div class="footer-section">
+    <div id="contact" class="footer-section">
         <div class="container">
             <div class="footer-main">
                 <div class="footer-content">
