--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
 
     <!-- START LANDING-SECTION -->
     <div id="home" class="landing">
-        <div class="landing-section">
-            <div class="text">
-                <h1>DESIGN COMES TO THOSE WHO WAIT</h1>
-                <p>Hello This is Onepage Multipurpose Template.</p>
+        <div class="container">
+            <div class="landing-section">
+                <div class="text">
+                    <h1>DESIGN COMES TO THOSE WHO WAIT</h1>
+                    <p>Hello This is Onepage Multipurpose Template.</p>
+                </div>
+                <div class="button">
+                    <button>LEARN MORE</button>
+                </div>
             </div>
-            <div class="button">
-                <button>LEARN MORE</button>
-            </div>
+            <img class="angleup" src="image/angles-up-solid.svg" alt="">
         </div>
     </div>
     <!-- END LANDING-SECTION -->
