--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <button>LEARN MORE</button>
                 </div>
             </div>
-            
+            <img class="angleup" src="image/angles-up-solid.svg" alt="">
         </div>
     </div>
     <!-- END LANDING-SECTION -->
