--- a/index.html
+++ b/index.html
@@ -130,57 +130,57 @@
                 <div class="box2">
                     <h5>Ps</h5>
                     <div class="prog">
-                        <span style="width: 85%;" data-progress="85%"></span>
+                        <span style="width: 0;" data-progress="85%"></span>
                     </div>
                     <h5>Ai</h5>
                     <div class="prog">
-                        <span style="width: 95%;" data-progress="98%"></span>
+                        <span style="width: 0;" data-progress="98%"></span>
                     </div>
                     <h5>Id</h5>
                     <div class="prog">
-                        <span style="width: 70%;" data-progress="80%"></span>
+                        <span style="width: 0;" data-progress="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>Ui</h5>
                     <div class="prog">
-                        <span style="width: 85%;" data-progress="85%"></span>
+                        <span style="width: 0;" data-progress="85%"></span>
                     </div>
                     <h5>Ux</h5>
                     <div class="prog">
-                        <span style="width: 88%;" data-progress="98%"></span>
+                        <span style="width: 0;" data-progress="98%"></span>
                     </div>
                     <h5>Responsive</h5>
                     <div class="prog">
-                        <span style="width: 75%;" data-progress="80%"></span>
+                        <span style="width: 0;" data-progress="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>Html</h5>
                     <div class="prog">
-                        <span style="width: 85%;" data-progress="85%"></span>
+                        <span style="width: 0;" data-progress="85%"></span>
                     </div>
                     <h5>Css</h5>
                     <div class="prog">
-                        <span style="width: 100%;" data-progress="98%"></span>
+                        <span style="width: 0;" data-progress="98%"></span>
                     </div>
                     <h5>Js</h5>
                     <div class="prog">
-                        <span style="width: 81%;" data-progress="80%"></span>
+                        <span style="width: 0;" data-progress="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>C++</h5>
                     <div class="prog">
-                        <span style="width: 85%;" data-progress="85%"></span>
+                        <span style="width: 0;" data-progress="85%"></span>
                     </div>
                     <h5>Java</h5>
                     <div class="prog">
-                        <span style="width: 98%;" data-progress="98%"></span>
+                        <span style="width: 0;" data-progress="98%"></span>
                     </div>
                     <h5>Swift</h5>
                     <div class="prog">
-                        <span style="width: 80%;" data-progress="80%"></span>
+                        <span style="width: 0;" data-progress="80%"></span>
                     </div>
                 </div>
             </div>
