--- a/index.html
+++ b/index.html
@@ -130,75 +130,75 @@
                 <div class="box2">
                     <h5>Ps</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="85%"></span>
+                        <span style="width: 0;" data-width="85%"></span>
                     </div>
                     <h5>Ai</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="98%"></span>
+                        <span style="width: 0;" data-width="98%"></span>
                     </div>
                     <h5>Id</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="80%"></span>
+                        <span style="width: 0;" data-width="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>Ui</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="85%"></span>
+                        <span style="width: 0;" data-width="85%"></span>
                     </div>
                     <h5>Ux</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="98%"></span>
+                        <span style="width: 0;" data-width="98%"></span>
                     </div>
                     <h5>Responsive</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="80%"></span>
+                        <span style="width: 0;" data-width="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>Html</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="85%"></span>
+                        <span style="width: 0;" data-width="85%"></span>
                     </div>
                     <h5>Css</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="98%"></span>
+                        <span style="width: 0;" data-width="98%"></span>
                     </div>
                     <h5>Js</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="80%"></span>
+                        <span style="width: 0;" data-width="80%"></span>
                     </div>
                 </div>
                 <div class="box2">
                     <h5>C++</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="85%"></span>
+                        <span style="width: 0;" data-width="85%"></span>
                     </div>
                     <h5>Java</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="98%"></span>
+                        <span style="width: 0;" data-width="98%"></span>
                     </div>
                     <h5>Swift</h5>
                     <div class="prog">
-                        <span style="width: 0;" data-progress="80%"></span>
+                        <span style="width: 0;" data-width="80%"></span>
                     </div>
                 </div>
             </div>
             <div class="small-box">
                 <div class="fi-box">
-                    <h4>694</h4>
+                    <h4 class="num" data-goal="647">0</h4>
                     <p>COMPLETED DESIGNS</p>
                 </div>
                 <div class="fi-box">
-                    <h4>324</h4>
+                    <h4 class="num" data-goal="124">0</h4>
                     <p>PAGES CREATED</p>
                 </div>
                 <div class="fi-box">
-                    <h4>134</h4>
+                    <h4 class="num" data-goal="188">0</h4>
                     <p>PAGES CODED</p>
                 </div>
                 <div class="fi-box">
-                    <h4>27</h4>
+                    <h4 class="num" data-goal="15">0</h4>
                     <p>APPS FINISHED</p>
                 </div>
             </div>
