--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             </p>
                         </div>
                         <div class="p-link">
-                            <p>Created by <a href="#">Graphberry</a>,Belgrade,Serbia</p>
+                            <p>Created by <a href="#">Mazen Mohamed</a>,Belgrade,Serbia</p>
                         </div>
                         <div class="copyright">
                             <p>&copy; 2022 - Sparkle</p>
